--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
+    "prettier": "^3.3.3"
   }
 }
